2015-03-06  Carl Hetherington  <cth@carlh.net>

	* Only allow even DCP channel counts of
	2 or more.

2015-03-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.14 released.

2015-03-04  Carl Hetherington  <cth@carlh.net>

	* Speculative fix to certificate not being
	recognised by EasyDCP Player.

	* Version 1.77.13 released.

2015-03-04  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect timing of sndfile content when
	video is being sped up or slowed down.

2015-02-27  c.hetherington  <cth@carlh.net>

	* Update full/play length in the timing panel when
	the DCP frame rate is changed.

2015-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.12 released.

2015-02-25  c.hetherington  <cth@carlh.net>

	* Fix one cause of hangs right at the end of an encode
	run (#508).

2015-02-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.11 released.

2015-02-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.10 released.

2015-02-24  Carl Hetherington  <cth@carlh.net>

	* Fix corrupted frames and crashes when duplicating
	frames from sources into the DCP (#507).

2015-02-22  Carl Hetherington  <cth@carlh.net>

	* Add a note to the timing panel to try to stop people
	changing the video frame rate in the wrong circumstances.

2015-02-16  Carl Hetherington  <cth@carlh.net>

	* Allow "deletion" of the audio part of a FFmpeg
	file from the timeline; delete unmaps the audio (#316).

2015-02-16  c.hetherington  <cth@carlh.net>

	* Resurrect JSON server code.

2015-02-14  Carl Hetherington  <cth@carlh.net>

	* Remove ^H shortcut to Hints dialog as it clashes
	with OS X's hide shortcut.

	* Possibly fix a variety of odd crashes caused by
	dangling connections to signals.

	* Version 1.77.9 released.

2015-02-13  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for crash on finding a server which
	may be caused by a failure to disconnect from
	ServerFinder when an Encoder is destroyed.

2015-02-11  Carl Hetherington  <cth@carlh.net>
