@@ -1,3 +1,9 @@
+2015-03-07  Carl Hetherington  <cth@carlh.net>
+
+	* Use the number of mapped audio channels
+	for the DCP name, not the number of channels
+	written to the DCP (#479).
+
 2015-03-06  Carl Hetherington  <cth@carlh.net>
 
 	* Only allow even DCP channel counts of
